<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cyrpto Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty"></string>

    <!-- Plain Hash User Display -->
    <string name="hash_title">Hash Without PBKDF:</string>
    <string name="hash_algorithm">Algorithm: %1$s</string>
    <string name="hash_provider">Provider: %1$s</string>

    <!-- PBKF Hash User Display -->
    <string name="pbkdf_title">PBKDF Hash:</string>
    <string name="pbkdf_salt">Salt: %1$s</string>
    <string name="pbkdf_salt_bitLength">Salt Bit Length: %1$i</string>
    <string name="pbkdf_key">Key: %1$s</string>
    <string name="pbkdf_algorithm">Algorithm: %1$s</string>
    <string name="pbkdf_provider">Provider: %1$s</string>
    <string name="pbkdf_iterations">Iterations: %1$i</string>

</resources>
