<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/editText_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Text to hash"
            android:layout_gravity="center_vertical|left"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/button_hash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hash"
            android:layout_gravity="center_vertical|right"/>

        </LinearLayout>

    <!-- Regular Hash Display -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/hash_title"
        android:id="@+id/textView_hashedTitle"
        android:textStyle="bold"
        />

    <!-- Regular Hash Provider -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/textView_hashed"
        android:text="@string/empty"
        />

    <!-- The Regular Hash Algorithm -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/textView_hashed_algorithm"
        android:text="@string/hash_algorithm"
        />

    <!-- The Regular Hash Provider -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/textView_hashed_provider"
        android:text="@string/hash_provider"
        />

    <!-- Separator -->
    <Space
        android:layout_width="fill_parent"
        android:layout_height="50dp" />

    <!-- PBKDF Display -->
    <TextView
        android:id="@+id/textView_pbkf_title"
        android:text="@string/pbkdf_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <!-- The hashed & keyed output -->
    <TextView
        android:id="@+id/textView_pbkdf_hashed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        />

    <!-- The PBKDF Salt -->
    <TextView
        android:id="@+id/textView_pbkdf_salt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pbkdf_salt"
        />

    <!-- The PBKDF Salt Bit Length-->
    <TextView
        android:id="@+id/textView_pbkdf_salt_bitLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pbkdf_salt_bitLength"
        />

    <!-- The PBKDF Algorithm -->
    <TextView
        android:id="@+id/textView_pbkdf_algorithm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pbkdf_algorithm"/>

    <!-- The PBKDF Provider -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/textView_pbkdf_provider"
        android:text="@string/pbkdf_provider"
        />

    <!-- The PBKDF Iterations -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/textView_pbkdf_iterations"
        android:text="@string/pbkdf_iterations"
        />


</LinearLayout>
